<resources>
    <string name="app_name">GoGreen</string>
    <string name="loginbuttontext">Login</string>
    <string name="registerbuttontext">Register</string>
    <string name="username_textbox">Username</string>
    <string name="password_textbox">Password</string>
    <string name="email_textbox">E-mail</string>
    <string name="title_activity_main">main</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>