<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInPage">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:background="#3A7C3D"
        android:gravity="center"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email_textbox"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <EditText
        android:id="@+id/textLoginPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password_textbox"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/textLoginEmail" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="120sp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#2196F3"
        android:text="@string/loginbuttontext"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLoginPass" />

    <Button
        android:id="@+id/toRegisterBtn"
        android:layout_width="120sp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:backgroundTint="#2196F3"
        android:text="@string/registerbuttontext"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/loginBtn"
        app:layout_constraintTop_toTopOf="@+id/loginBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>